# KEA_DAT_DevOps_2025_Spring

./: .gitignore  LICENSE  README.adoc  combined_course_markdown.md  repositories.py
.github/workflows/: validate_repositories_py_file.yaml
00._Course_Material/00._Meta_Course_Material/: about_the_course.md  exam_presentation_requirements.md  exam_project_requirements.md  exam_report_requirements.md
00._Course_Material/02._Slides/: 09._web_crawling_architectural_decisions.md
01._Dotenv/01._python/: main.py
02._Linting/: index.js
03._Docker_Python_Project/: Dockerfile  app.py
04._Docker_Node_Project/: docker-compose.dev.yml
04._Docker_Node_Project/node_project/: Dockerfile.dev  app.js  package-lock.json  package.json
05._Debug_Docker-Compose/app/: docker-compose.yml
06._End-to-End_Testing/: package-lock.json  package.json  playwright.config.js
06._End-to-End_Testing/tests/: whoknows.spec.js
07._Database_Migrations/: 20250404143624_mro_migration.js  docker-compose.yml  mydatabase_mro_docs.html  mysqldump.sql  pgdump.sql
07._Database_Migrations/01._node_knex/: index.js  knexfile.js  package-lock.json  package.json
08._Webscraping_Cheerio/: index.html  index.js  package-lock.json  package.json
09._BeautifulSoup4/: main.py  pyproject.toml
11._Crawler/: crawler.js  package-lock.json
12._Serverless_Function/: package-lock.json
13._Terraform/: main.tf  outputs.tf  variables.tf
15._Github_Provider_Terraform/: .terraform.lock.hcl  main.tf  variables.tf
16._Kubernetes/: deployment_service.yaml  keasmonkey.sh  service.yaml
(+122 files in other folders)
